[package]
name = "bevy_iso_world_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_ecs_tilemap = "0.14.0"
fastnoise-lite = "1.1.1"

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "bevy/asset_processor"]
